packages/cashc/test/compiler/ParseError/import_after_contract.cash
contract Test() {
    function spend() {
        require(true);
    }
}

import "./helpers.cash";
